# Yahtzee

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
include/: D6.cpp  D6.h  Dice.h  Game.cpp  Game.h  Player.cpp  Player.h  Scorecard.cpp  Scorecard.h  main.cpp
